syntax = "proto2";

package Game;

enum TwGameCommandType
{
	SC_CONNECT = 1;
	CS_CONNECT = 2;
}

message TwGameCommand
{
	required TwGameCommandType CommandType = 1;
	required bytes Content = 2;
}

message TwGameConnectionCS
{
    required bytes Token = 1;
}

message TwGameConnectionSC
{
    required uint64 UserId = 1; 
    required uint32 MapId = 2;
    required uint32 HeroTypeId = 3;
}

message TwGameHeroMoveCS
{
    optional uint32 PosX = 1;
    optional uint32 PosY = 2;
    optional float Direction = 3;
}